[project]
name = "proxy-aggregator"
version = "1.0.0"
description = "Sistema de proxy aggregator com extração, validação e API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "aiohttp>=3.9.0",
    "apscheduler>=3.10.0",
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
